force-app/main/default/objects/Quote/fields/chamberOfCommerce__c.field-meta.xml
<CustomField>
    <fullName>chamberOfCommerce__c</fullName>
    <label>chamberOfCommerce</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>