force-app/main/default/objects/Quote/fields/commissionType__c.field-meta.xml
<CustomField>
    <fullName>commissionType__c</fullName>
    <label>commissionType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PCPM</fullName>
                <default>true</default>
                <label>PCPM</label>
            </value>
            <value>
                <fullName>PMPM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>