force-app/main/default/objects/Quote/fields/commissionValue__c.field-meta.xml
<CustomField>
    <fullName>commissionValue__c</fullName>
    <label>commissionValue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>