force-app/main/default/objects/Quote/fields/premiumDelay__c.field-meta.xml
<CustomField>
    <fullName>premiumDelay__c</fullName>
    <inlineHelpText>(30 days- Standard, 60 days, 90 days)</inlineHelpText>
    <label>premiumDelay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>