force-app/main/default/objects/Quote/fields/Sym_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Sym_Completed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>