force-app/main/default/objects/Quote/fields/Symphony_Status__c.field-meta.xml
<CustomField>
    <fullName>Symphony_Status__c</fullName>
    <description>Used in the symphony POC and stores the pizza tracker status.</description>
    <label>Symphony Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group Profile</fullName>
            </value>
            <value>
                <fullName>Get Recommendation</fullName>
            </value>
            <value>
                <fullName>Get Rate</fullName>
            </value>
            <value>
                <fullName>Plan Selection</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Customer Setup</fullName>
            </value>
            <value>
                <fullName>Access to Care</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>