force-app/main/default/objects/Quote/recordTypes/Symphony_Quote.recordType-meta.xml
<RecordType>
    <fullName>Symphony_Quote</fullName>
    <active>true</active>
    <description>Used for the Symphony POC</description>
    <label>Symphony Quote</label>
</RecordType>